# geostat

./: .gitattributes  .gitignore  404.html  DEV.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  style.css
about/: index.html
api/: index.html
api/api/: index.html
api/test/: index.html
doc/: 3d-gaussian-processes.ipynb  gaussian-processes-in-geostat.ipynb  mcmc-inference.ipynb  predictions-with-mesh.ipynb
docs/: about.md  api.md  examples.md  featurizer.md  gp.md  index.md  kernel.md  kernel_constant.md  kernel_delta.md  kernel_gammaexponential.md  kernel_intexponential.md  kernel_intsquaredexponential.md  kernel_kernel.md  kernel_mix.md  kernel_noise.md  kernel_product.md  kernel_quadstack.md  kernel_ramp.md  kernel_rampstack.md  kernel_smoothconvex.md  kernel_squaredexponential.md  kernel_stack.md  kernel_trendprior.md  kernel_wiener.md  mix.md  model.md  normalizingfeaturizer.md  style.css
docs/notebooks/: gaussian-processes-in-tensorflow.ipynb
docs/notebooks/3d-gaussian-processes/: 3d-gaussian-processes.md
docs/notebooks/gaussian-processes-in-geostat/: gaussian-processes-in-geostat.md
docs/notebooks/gaussian-processes-in-tensorflow/: gaussian-processes-in-tensorflow.md
docs/notebooks/predictions-with-mesh/: predictions-with-mesh.ipynb  predictions-with-mesh.md
docs/notebooks/wiener-process/: wiener-process.md
documentation/: mkdocs.yml
examples/: index.html
featurizer/: index.html
gp/: index.html
kernel/: index.html
kernel_constant/: index.html
kernel_delta/: index.html
kernel_gammaexponential/: index.html
kernel_intexponential/: index.html
kernel_intsquaredexponential/: index.html
kernel_kernel/: index.html
kernel_mix/: index.html
kernel_noise/: index.html
kernel_product/: index.html
kernel_quadstack/: index.html
kernel_ramp/: index.html
kernel_rampstack/: index.html
kernel_smoothconvex/: index.html
kernel_squaredexponential/: index.html
kernel_stack/: index.html
kernel_trendprior/: index.html
kernel_wiener/: index.html
mix/: index.html
model/: index.html
normalizingfeaturizer/: index.html
notebooks/3d-gaussian-processes/: 3d-gaussian-processes.ipynb
notebooks/3d-gaussian-processes/3d-gaussian-processes/: index.html
notebooks/gaussian-processes-in-geostat/: gaussian-processes-in-geostat.ipynb
notebooks/gaussian-processes-in-geostat/gaussian-processes-in-geostat/: index.html
notebooks/gaussian-processes-in-tensorflow/: gaussian-processes-in-tensorflow.ipynb
notebooks/gaussian-processes-in-tensorflow/gaussian-processes-in-tensorflow/: index.html
notebooks/predictions-with-mesh/: predictions-with-mesh.ipynb
notebooks/predictions-with-mesh/predictions-with-mesh/: index.html
notebooks/wiener-process/: wiener-process.ipynb
notebooks/wiener-process/wiener-process/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/about/: index.html
site/examples/: index.html
site/notebooks/3d-gaussian-processes/: 3d-gaussian-processes.ipynb
site/notebooks/gaussian-processes-in-geostat/gaussian-processes-in-geostat/: index.html
site/notebooks/predictions-with-mesh/predictions-with-mesh/: index.html
site/search/: search_index.json
src/geostat/: __init__.py  covfunc.py  custom_op.py  gp.py  kernel.py  krige.py  linop.py  lo.py  mean.py  mesh.py  metric.py  misc.py  model.py  op.py  param.py  params.py  spatialinterpolator.py  test.py  util.py
test/: index.html
tests/: test_antiderivative.py  test_delta.py  test_doc_kernel.py  test_doc_model.py  test_gp.py  test_krige.py  test_linop.py  test_mcmc.py  test_mesh.py  test_metric.py  test_multigp.py  test_quadstack.py  test_test.py  test_trend.py  test_trendprior.py
