[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geostat"
version = "0.0.1"
description = "Model spatial data with Gaussian processes"
readme = "README.md"
authors = [
  "Michael J. Stephens <mjstephens@usgs.gov>",
  "Will Chang <will@hypergradient.ai>"
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Apache-2.0",
    "Programming Language :: Python :: 3",
]
keywords = ["geospatial", "spatial", "interpolation", "gaussian process", "krige", "kriging"]

[project.urls]
Homepage = "https://github.com/whdc/geostat"
