[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geostat"
version = "0.6.6"
description = "Model spatial data with Gaussian processes"
readme = "README.md"
authors = [
  {name="Michael J. Stephens", email="mjstephens@usgs.gov"},
  {name="Will Chang", email="will@hypergradient.ai"}
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
keywords = ["geospatial", "spatial", "interpolation", "gaussian process", "krige", "kriging"]

[project.urls]
Homepage = "https://github.com/whdc/geostat"
