[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geostat"
version = "0.11.0"
requires-python = ">=3.8"
description = "Model spatial data with Gaussian processes"
readme = "README.md"
authors = [
  {name="Michael J. Stephens", email="mjstephens@usgs.gov"},
  {name="Will Chang", email="will@hypergradient.ai"}
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
keywords = ["geospatial", "spatial", "interpolation", "gaussian process", "krige", "kriging"]

dependencies = [
    "matplotlib >= 3.0",
    "numpy >= 1.19",
    "pandas >= 1.2",
    "scipy >= 1.5",
    "shapely >= 1.8",
    "tensorflow >= 2.14",
    "tensorflow_probability >= 0.22.1"]

[project.urls]
Homepage = "https://github.com/whdc/geostat"

[project.optional-dependencies]
extras = [
    "pytest >= 3.0",
    "pyproj >= 3.0"]
