[metadata]
name = geostat
version = 0.0.0
author = Michael J. Stephens
author_email = mjstephens@usgs.gov
description = Python package for performing kriging and Gaussian processes with geoscience-oriented utilities.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://code.usgs.gov/mjstephens/geostat
project_urls =
    Bug Tracker = https://code.usgs.gov/mjstephens/geostat
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache2 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
