[metadata]
name = geostat
version = 0.0.1
author = Michael J. Stephens, Will Chang
author_email = mjstephens@usgs.gov, will@hypergradient.ai
description = Python package for performing kriging and Gaussian processes with geoscience-oriented utilities.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://code.usgs.gov/mjstephens/geostat
project_urls =
    Bug Tracker = https://code.usgs.gov/mjstephens/geostat
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache2 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib >= 3.0
    numpy >= 1.19
    pandas >= 1.2
    scipy >= 1.5
    shapely >= 1.8
    tensorflow >= 2.5
    tensorflow_probability >= 0.12.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest >= 3.0
    pyproj >= 3.0
